# VinzzRenderer-plugin

./: .gitmodules
.github/workflows/: build-android.yml  build.yml
MobileGlues/: build.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  mobileglues_info_getter.h
app/src/main/java/com/fcl/plugin/mobileglues/: CrashLogger.kt  MainActivity.kt  MainActivity.kt.5f_bak  MainActivity.kt.feat2_bak  MainActivity.kt.fix_bak  MainActivity.kt.full_bak  MainActivity.kt.lrz_bak  MainActivity.kt.v3_bak
app/src/main/java/com/fcl/plugin/mobileglues/settings/: MGConfig.kt  MGConfig.kt.5f_bak  MGConfig.kt.full_bak
app/src/main/res/drawable/: btn_enable_bg.xml  card_item_bg.xml  changelog_card_bg.xml  header_outer_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_main.xml.5f_bak  activity_main.xml.cl_bak  activity_main.xml.comp_bak  activity_main.xml.crash_bak  activity_main.xml.feat2_bak  spinner.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  strings.xml.5f_bak  strings.xml.v3_bak  themes.xml
app/src/main/res/values-zh/: strings.xml
